# llm-from-scratch

./: README.md  pyproject.toml
llm_from_scratch/chapter_02/: exercise.ipynb  protocols.py  tests.py
llm_from_scratch/chapter_05/: exercise.ipynb  lib.py
