[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.0.1"
dependencies = [
    "jupyter",
    "torch",
    "tiktoken",
    "numpy",
    "black[jupyter]",
    "isort",
    "matplotlib",
]
requires-python = ">=3.11"
